--- a/package.json
+++ b/package.json
@@ -29,6 +29,11 @@
     "babelrc-rollup": "^3.0.0",
     "jest": "^23.5.0",
     "rollup": "^0.65.0",
-    "rollup-plugin-babel": "^3.0.7"
+    "rollup-plugin-babel": "^3.0.7",
+    "rollup-plugin-commonjs": "^9.1.6",
+    "rollup-plugin-node-resolve": "^3.3.0"
+  },
+  "dependencies": {
+    "dayjs": "^1.7.5"
   }
 }
